# cmake_example

./: .gitignore
add_custom/: .gitignore  CMakeLists.txt
add_custom/src/: main.cpp
add_library/: .gitignore
add_library/alias/: CMakeLists.txt  main.cpp
add_library/alias/Plus/include/: plus.hpp
add_library/alias/Plus/src/: plus.cpp
add_library/import/: CMakeLists.txt  main.cpp
add_library/import/plus/: CMakeLists.txt
add_library/import/plus/cmake/: MyPlusConfig.cmake.in  MyPlusUninstall.cmake  Plus1Config.cmake.in
add_library/interface/: CMakeLists.txt  main.cpp
add_library/interface/Plus/: CMakeLists.txt
add_library/interface/Plus/cmake/: PlusConfig.cmake.in
add_library/interface/Plus/include/: plus.h
add_library/interface/Plus/include/add/: add.hpp
add_library/interface/Plus/include/plus/: plus.hpp
add_library/normal/: CMakeLists.txt  add.cpp  main.cpp
add_library/object/: CMakeLists.txt
arguments/: CMakeLists.txt
backtrace/: CMakeLists.txt  readme.md  toolchain.cmake
backtrace/src/: backtrace_example.cpp
breakpad_example/: CMakeLists.txt  readme.md
breakpad_example/src/: main.cpp
cmakefindpackage/: CMakeLists.txt  README.md  main.cpp
cmakefindpackage/plus/: CMakeLists.txt  PLUSConfig.cmake.in
cmakefindpackage/plus/include/: plus.h
cmakefindpackage/plus/src/: plus.cpp
definitions/: CMakeLists.txt  main.cpp  readme.md
dlsym/: CMakeLists.txt
dlsym/include/: example.hpp
dlsym/my_library/: CMakeLists.txt
dlsym/my_library/include/: my_library.hpp
dlsym/my_library/src/: my_library.cpp
export_example/: CMakeLists.txt  main.cpp  readme.md
export_example/plus/: .gitignore  CMakeLists.txt
export_example/plus/include/plus/: plus.hpp
export_example/plus/src/: add.cpp  plus.cpp
pkg_config/: CMakeLists.txt  README.md
publicprivateinterface/: CMakeLists.txt  main.cpp  main.cpp.interface  main.cpp.private  main.cpp.public  readme.md
publicprivateinterface/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.cpp.interface  hello_world.cpp.private  hello_world.cpp.public  hello_world.hpp  hello_world.hpp.interface  hello_world.hpp.private  hello_world.hpp.public
publicprivateinterface/hello_world/hello/: CMakeLists.txt  hello.cpp  hello.hpp
publicprivateinterface/hello_world/world/: CMakeLists.txt  world.cpp  world.hpp
python_example/: CMakeLists.txt  example.cpp  example.hpp  main.cpp
release_debug/: CMakeLists.txt  readme.md
release_debug/include/: hello.hpp
release_debug/src/: hello.cpp  main.cpp
strip_dlsym/: conanfile.py  toolchain.cmake
strip_dlsym/src/: example.cpp  main.cpp
strip_objcopy/: CMakeLists.txt  gdbcommand.txt  main.cpp  readme.md
strip_objcopy/include/: fun.hpp
strip_objcopy/scripts/: auto_objcopy.py
strip_objcopy/src/: fun.cpp
