cmake_minimum_required(VERSION 3.23)
project(python_example)

find_package(Python3 COMPONENTS Interpreter Development NumPy REQUIRED)
if(Python3_FOUND)
    message(STATUS "Python3 DIR: ${Python3_DIR}")
    message(STATUS "Python3 executable: ${Python3_EXECUTABLE}")
    message(STATUS "Python3 include dirs: ${Python3_INCLUDE_DIRS}")
    message(STATUS "Python3 libraries: ${Python3_LIBRARIES}")
    message(STATUS "Python3 numpy include dirs: ${Python3_NumPy_INCLUDE_DIRS}")
    message(STATUS "Python3 numpy libraries: ${Python3_NumPy_LIBRARIES}")
    message(STATUS "Python3 interpreter: ${Python3_INTERPRETER}")
    message(STATUS "Python3 version: ${Python3_VERSION}")
    message(STATUS "Python3 version major: ${Python3_VERSION_MAJOR}")
    message(STATUS "Python3 soabi: ${Python_SOABI}")
    message(STATUS "Python3 sosabi: ${Python_SOSABI}")
    message(STATUS "Python3 library: ${Python_LIBRARY}")
else()
    message(FATAL_ERROR "Python3 not found")
endif()

Python3_add_library(example SHARED example.cpp)
target_include_directories(example PUBLIC ${Python3_INCLUDE_DIRS} ${Python3_NumPy_INCLUDE_DIRS})
target_link_libraries(example PUBLIC ${Python3_LIBRARIES} ${Python3_NumPy_LIBRARIES})
set(WITH_SOABI TRUE)
if(WITH_SOABI)
    set_target_properties(example PROPERTIES PREFIX "" SUFFIX ".cpython-38-x86_64-linux-gnu.so")
endif()

add_executable(main main.cpp)
target_link_libraries(main PRIVATE example)